[project]
name = "grib-parse-collect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geojson>=3.2.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pygrib>=2.1.6",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "shapely>=2.1.2",
]
